--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-      <div><img src="image.png" alt="Launchpad Kerala 2024 Banner"></div>
+      <div class="header-image"><img src="image.png" alt="Launchpad Kerala 2024 Banner"></div>
         <div class="main-heading">Introduction</div>
         <div class="content">
             GTECH Mulearn in collaboration with IEEE Kerala brings Launchpad 2024, with the goal of linking the right opportunities with your skills. Launchpad Kerala 2024 is a premier job fair that brings together skilled graduates and innovative companies from the field of technology.  It strives to foster connections that drive progress and innovation within Kerala's job market.
